force-app/main/default/objects/KimbleOne__CapabilityRating__c/KimbleOne__CapabilityRating__c.object-meta.xml
<CustomObject>
    <label>Capability Rating</label>
    <nameField>
        <label>Capability Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capability Ratings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>