force-app/main/default/objects/KimbleOne__CapabilityRating__c/fields/KimbleOne__NumericRating__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NumericRating__c</fullName>
    <label>Numeric Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>