force-app/main/default/objects/KimbleOne__CapabilityRating__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__NumericRating__c</columns>
    <columns>KimbleOne__Code__c</columns>
    <columns>KimbleOne__DisplaySequence__c</columns>
    <columns>KimbleOne__Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>